--- a/spreading_correction.xml.sample
+++ b/spreading_correction.xml.sample
@@ -1,4 +1,4 @@
-<tool id="spreading-Correction" name="Correct spreading">
+<tool id="spreading-Correction" name="Correct spreading" version=1.0> 
 <description></description>
 <command interpreter="bash">
 spreading_correction.sh
